--- a/F_Timer/Base.lproj/Main.storyboard
+++ b/F_Timer/Base.lproj/Main.storyboard
@@ -1,24 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="F_Timer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tomato" translatesAutoresizingMaskIntoConstraints="NO" id="9WO-AG-chm">
+                                <rect key="frame" x="137.5" y="24" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="0Q5-qe-Wxu"/>
+                                    <constraint firstAttribute="height" constant="100" id="Rkf-Bx-CgR"/>
+                                </constraints>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qi-JN-GXZ">
+                                <rect key="frame" x="24" y="204" width="327" height="60"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" translatesAutoresizingMaskIntoConstraints="NO" id="L8I-Ej-Cbc">
+                                <rect key="frame" x="48" y="294" width="279" height="4"/>
+                            </progressView>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" style="wheels" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SdP-qY-nYr">
+                                <rect key="frame" x="0.0" y="154" width="375" height="216"/>
+                            </datePicker>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="wbl-ED-f6G">
+                                <rect key="frame" x="24" y="394" width="327" height="34.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1HY-Qe-tAF">
+                                        <rect key="frame" x="0.0" y="0.0" width="123.5" height="34.5"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HEf-IV-JMb">
+                                        <rect key="frame" x="203.5" y="0.0" width="123.5" height="34.5"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="시작"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="wbl-ED-f6G" firstAttribute="top" secondItem="SdP-qY-nYr" secondAttribute="bottom" constant="24" id="4NR-ax-GsO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="L8I-Ej-Cbc" secondAttribute="trailing" constant="48" id="CPF-1b-Aki"/>
+                            <constraint firstItem="SdP-qY-nYr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DdW-QE-NMn"/>
+                            <constraint firstAttribute="trailing" secondItem="SdP-qY-nYr" secondAttribute="trailing" id="Nbh-IH-bNU"/>
+                            <constraint firstItem="SdP-qY-nYr" firstAttribute="top" secondItem="9WO-AG-chm" secondAttribute="bottom" constant="30" id="Uw3-vC-Kbe"/>
+                            <constraint firstItem="0qi-JN-GXZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="aHc-fi-Oiv"/>
+                            <constraint firstItem="L8I-Ej-Cbc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="48" id="d9t-Pa-r68"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wbl-ED-f6G" secondAttribute="trailing" constant="24" id="dl3-NK-ZyY"/>
+                            <constraint firstItem="0qi-JN-GXZ" firstAttribute="top" secondItem="9WO-AG-chm" secondAttribute="bottom" constant="80" id="goB-my-TwR"/>
+                            <constraint firstItem="wbl-ED-f6G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="iqp-GJ-kgf"/>
+                            <constraint firstItem="L8I-Ej-Cbc" firstAttribute="top" secondItem="0qi-JN-GXZ" secondAttribute="bottom" constant="30" id="itC-jH-zJB"/>
+                            <constraint firstItem="9WO-AG-chm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="qe6-JU-TAa"/>
+                            <constraint firstItem="0qi-JN-GXZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qrP-oX-hpt"/>
+                            <constraint firstItem="9WO-AG-chm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="t35-Jm-pEo"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="3.1484257871064472"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tomato" width="32" height="32"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
